# fastapi-postgres-async-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
{{cookiecutter.project_name}}/src/: pyproject.toml
{{cookiecutter.project_name}}/src/app/: asgi.py
{{cookiecutter.project_name}}/src/app/api/: deps.py
{{cookiecutter.project_name}}/src/app/api/v1/endpoints/: user.py
{{cookiecutter.project_name}}/src/app/core/: config.py
{{cookiecutter.project_name}}/src/app/crud/: user_crud.py
{{cookiecutter.project_name}}/src/app/models/: user_model.py
{{cookiecutter.project_name}}/src/app/schemas/: user_schema.py
{{cookiecutter.project_name}}/src/compose/production/: Dockerfile  Dockerfile.pip
{{cookiecutter.project_name}}/src/requirements/: base.txt
{{cookiecutter.project_slug}}/: .env.example  .env.prod.example  README.md  docker-compose.prod.yml  docker-compose.yml
{{cookiecutter.project_slug}}/pgadmin/: servers.json
{{cookiecutter.project_slug}}/src/: pyproject.toml
{{cookiecutter.project_slug}}/src/app/: main.py
{{cookiecutter.project_slug}}/src/app/api/: deps.py
{{cookiecutter.project_slug}}/src/app/api/v1/endpoints/: auth.py  role.py  user.py
{{cookiecutter.project_slug}}/src/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/src/app/crud/: base_crud.py  role_crud.py  user_crud.py
{{cookiecutter.project_slug}}/src/app/models/: user_model.py
{{cookiecutter.project_slug}}/src/app/schemas/: auth_schema.py  common_schema.py  user_schema.py
{{cookiecutter.project_slug}}/src/app/utils/: uuid6.py
{{cookiecutter.project_slug}}/src/compose/local/: Dockerfile  Dockerfile.pip
{{cookiecutter.project_slug}}/src/requirements/: base.txt
