[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "1.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.black]
line-length = 99
target-version = ["py310", "py311"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"


[tool.ruff]
line-length = 99
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.poetry.dependencies]
# Python version
python = "^3.11"
# FastApi and Extencions
fastapi = { extras = ["all"], version = "^0.99.0" }
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.12.9" }
fastapi-async-sqlalchemy = "^0.3.14"
python-multipart = "^0.0.6"
# ASGI server
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
# Database
sqlmodel = "^0.0.8"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
# Logger
loguru = "^0.7.0"
# Cryptography
bcrypt = "^4.0.1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }

[tool.poetry.group.dev.dependencies]
yesqa = "^1.5.0"
httpx = "^0.24.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.0"
ruff = "^0.0.286"
interrogate = "^1.5.0"
pre-commit = "^3.4.0"
# mypy
mypy = "^1.5.1"
types-python-dateutil = "^2.8.19.14"
types-redis = "^4.6.0.3"
types-ujson = "^5.8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
